--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,39 @@
 {
-	"compileOnSave": false,
-	"compilerOptions": {
-		"rootDir": ".",
-		"sourceMap": true,
-		"declaration": false,
-		"moduleResolution": "node",
-		"emitDecoratorMetadata": true,
-		"experimentalDecorators": true,
-		"importHelpers": true,
-		"target": "es2015",
-		"module": "esnext",
-		"typeRoots": ["node_modules/@types"],
-		"lib": ["es2017", "dom"],
-		"skipLibCheck": true,
-		"skipDefaultLibCheck": true,
-		"baseUrl": ".",
-		"paths": {
-			"@glotrix/core": ["libs/core/src/index.ts"],
-			"@glotrix/ui/navigation": ["libs/ui/navigation/src/index.ts"],
-			"@glotrix/ui/avatar": ["libs/ui/avatar/src/index.ts"],
-			"@glotrix/ui/forms": ["libs/ui/forms/src/index.ts"],
-			"@glotrix/ui/tables": ["libs/ui/tables/src/index.ts"],
-			"@glotrix/ui/search-bar": ["libs/ui/search-bar/src/index.ts"],
-			"@glotrix/ui/carousel": ["libs/ui/carousel/src/index.ts"],
-			"@glotrix/models": ["libs/models/src/index.ts"],
-			"@glotrix/ui/upload-file": ["libs/ui/upload-file/src/index.ts"],
-			"@glotrix/ui/image-preview": ["libs/ui/image-preview/src/index.ts"],
-			"@glotrix/ui/images-upload": ["libs/ui/images-upload/src/index.ts"],
-			"@glotrix/ui/login": ["libs/ui/login/src/index.ts"],
-			"@glotrix/ui/counter": ["libs/ui/counter/src/index.ts"],
-			"@glotrix/ui/clau": ["libs/ui/clau/src/index.ts"],
-			"@glotrix/ui/card": ["libs/ui/card/src/index.ts"],
-			"@glotrix/ui/spinner": ["libs/ui/spinner/src/index.ts"]
-		}
-	},
-	"exclude": ["node_modules", "tmp"]
+  "compileOnSave": false,
+  "compilerOptions": {
+    "rootDir": ".",
+    "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "target": "es2015",
+    "module": "esnext",
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"],
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@glotrix/core": ["libs/core/src/index.ts"],
+      "@glotrix/ui/navigation": ["libs/ui/navigation/src/index.ts"],
+      "@glotrix/ui/avatar": ["libs/ui/avatar/src/index.ts"],
+      "@glotrix/ui/forms": ["libs/ui/forms/src/index.ts"],
+      "@glotrix/ui/tables": ["libs/ui/tables/src/index.ts"],
+      "@glotrix/ui/search-bar": ["libs/ui/search-bar/src/index.ts"],
+      "@glotrix/ui/carousel": ["libs/ui/carousel/src/index.ts"],
+      "@glotrix/models": ["libs/models/src/index.ts"],
+      "@glotrix/ui/upload-file": ["libs/ui/upload-file/src/index.ts"],
+      "@glotrix/ui/image-preview": ["libs/ui/image-preview/src/index.ts"],
+      "@glotrix/ui/images-upload": ["libs/ui/images-upload/src/index.ts"],
+      "@glotrix/ui/login": ["libs/ui/login/src/index.ts"],
+      "@glotrix/ui/counter": ["libs/ui/counter/src/index.ts"],
+      "@glotrix/ui/clau": ["libs/ui/clau/src/index.ts"],
+      "@glotrix/ui/card": ["libs/ui/card/src/index.ts"],
+      "@glotrix/ui/spinner": ["libs/ui/spinner/src/index.ts"],
+      "@glotrix/ui/snackbar": ["libs/ui/snackbar/src/index.ts"]
+    }
+  },
+  "exclude": ["node_modules", "tmp"]
 }
