adding local storange

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "font-awesome": "^4.7.0",
     "lodash.startcase": "^4.4.0",
     "ngx-toastr": "^11.1.0",
+    "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
