--- a/package.json
+++ b/package.json
@@ -84,6 +84,11 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.19.0",
     "typescript": "~3.4.5",
-    "webpack-bundle-analyzer": "^3.4.1"
+    "webpack-bundle-analyzer": "^3.4.1",
+    "protractor": "~5.4.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3"
   }
 }
