--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
       "@glotrix/ui/spinner": ["libs/ui/spinner/src/index.ts"],
       "@glotrix/ui/snackbar": ["libs/ui/snackbar/src/index.ts"],
       "@glotrix/ui/quote": ["libs/ui/quote/src/index.ts"],
-      "@glotrix/ui/poster-card": ["libs/ui/poster-card/src/index.ts"]
+      "@glotrix/ui/poster-card": ["libs/ui/poster-card/src/index.ts"],
+      "@glotrix/ui/tabs": ["libs/ui/tabs/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
